...
                                                <rect key="frame" x="0.0" y="0.0" width="145" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" verticalHuggingPriority="252" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="peh-j8-Dlc" userLabel="Sol">
                                                <rect key="frame" x="0.0" y="139.66666666666666" width="130" height="174.99999999999997"/>
                                                <subviews>
...
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="eC9-Cq-xO4" userLabel="Mercurio">
                                                <rect key="frame" x="81.666666666666671" y="10.666666666666664" width="82.000000000000014" height="93"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mercúrio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZp-Bx-aOV">
                                                        <rect key="frame" x="0.0" y="0.0" width="82" height="34"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="0.0" width="88" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="fun-NY-kP7" userLabel="Venus">
                                                <rect key="frame" x="38.666666666666657" y="270" width="61" height="94"/>
                                                <subviews>
...
                                                        </connections>
                                                    </button>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vênus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5AF-ew-a6P">
                                                        <rect key="frame" x="2.3333333333333428" y="64" width="56" height="30"/>
                                                        <constraints>
...
                                                <rect key="frame" x="0.0" y="0.0" width="85" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="k8L-b5-GkR" userLabel="Terra">
                                                <rect key="frame" x="27.666666666666686" y="156.66666666666666" width="70" height="100.99999999999997"/>
                                                <subviews>
...
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Qp-Sx-Q5d" userLabel="Lua">
                                                <rect key="frame" x="12.666666666666686" y="82.666666666666671" width="40" height="69.000000000000014"/>
                                                <subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="84" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iYh-jr-38b" userLabel="Marte">
                                                <rect key="frame" x="32" y="265" width="70" height="104"/>
                                                <subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="85" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="AIo-lq-FiZ" userLabel="Jupiter">
                                                <rect key="frame" x="7.6666666666666856" y="114" width="100" height="126"/>
                                                <subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="84.666666666666671" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="15z-eu-aea" userLabel="Saturno">
                                                <rect key="frame" x="5.3333333333333712" y="265.66666666666669" width="110" height="123"/>
                                                <subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="84.666666666666671" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="nk2-0E-cmN" userLabel="Urano">
                                                <rect key="frame" x="12.333333333333371" y="76.666666666666671" width="80" height="101.00000000000001"/>
                                                <subviews>
...
                                                <rect key="frame" x="0.0" y="0.0" width="188.66666666666666" height="414"/>
                                            </imageView>
                                            <stackView opaque="NO" contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" axis="vertical" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="M2y-Gz-gBt" userLabel="Netuno">
                                                <rect key="frame" x="65.333333333333258" y="264.66666666666669" width="68" height="105"/>
                                                <subviews>
...
