...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F33-pF-dIT">
                                <rect key="frame" x="393.5" y="275" width="109" height="47"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="109" id="EDp-ZS-J6R"/>
                                    <constraint firstAttribute="height" constant="47" id="Vfw-WM-Nrj"/>
                                </constraints>
                                <state key="normal" image="Skip"/>
                                <connections>
                                    <action selector="skipButton:" destination="cHO-TI-CQO" eventType="touchUpInside" id="fh1-3D-OHJ"/>
                                    <segue destination="nLL-gW-qx4" kind="show" identifier="WelcomeForHome" id="gel-3q-qwE"/>
                                </connections>
                            </button>
                        </subviews>
...
